Fixing page horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
   --color-zinc: #101010;
 }
 
+html {
+  overflow-x: hidden;
+}
 body {
   color: white;
   width: 100dvw;
